--- a/WebContent/join.html
+++ b/WebContent/join.html
@@ -7,17 +7,28 @@
 <body>
 <h1>클럽 가입</h1>
 <form action="/html/action_page.jsp">
-  이름:<br>
+  이름<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZkr3AjJXKkIoGKzd9YOEhRdnMtkHTNa0XKjICN0ay2Ltj6BoOyQ" alt="Trulli" width="50" height="40">
+  <br>
   <input type="text" name="name" value="">
   <br>
-  전화번호:<br>
+  전화번호<img src="https://t1.daumcdn.net/cfile/tistory/9972E23F5B4D762216" alt="Trulli" width="50" height="40">
+  <br>
   <input type="text" name="phone" value="">
   <br>
-  이메일:<br>
+  이메일<img src="http://m.naradeco.co.kr/web/product/big/201808/e3bff00651b6fcb72a644cc63b8fe522.jpg" alt="Trulli" width="50" height="40">
+  <br>
   <input type="text" name="email" value="">
   <br><br>
   <input type="submit" value="가입">
-</form> 
+  <br><br>
+  <img src="  https://contents.vryjam.com/2IQiKFDR8gGvvCs_small_low_thumb.gif" alt="Trulli" width="300" height="100">
+  <br>
+  <button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+지금 시간이..?</button>
 
+<p id="demo"></p>
+
+</form> 
 </body>
 </html>
