--- a/WebContent/Ex3.html
+++ b/WebContent/Ex3.html
@@ -15,18 +15,18 @@
 <body>
 
 <div class="cities">
-<h2>London</h2>
+<h2>경남대</h2>
 <p>London is the capital of England.</p>
 </div> 
 
 <div class="cities">
-<h2>Paris</h2>
+<h2>아카데미</h2>
 <p>Paris is the capital of France.</p>
 </div>
 
 <div class="cities">
-<h2>Tokyo</h2>
-<p>Tokyo is the capital of Japan.</p>
+<h2>취업 성공</h2>
+<p>취업 is the goal.</p>
 </div>
 </body>
 </html>
