--- a/WebContent/join.html
+++ b/WebContent/join.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>클럽 가입</h1>
-<form action="/html/action_page.jsp">
+<form action="action_page.jsp">
   이름<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZkr3AjJXKkIoGKzd9YOEhRdnMtkHTNa0XKjICN0ay2Ltj6BoOyQ" alt="Trulli" width="50" height="40">
   <br>
   <input type="text" name="name" value="">
@@ -23,12 +23,13 @@
   <br><br>
   <img src="  https://contents.vryjam.com/2IQiKFDR8gGvvCs_small_low_thumb.gif" alt="Trulli" width="300" height="100">
   <br>
+  </form>
+  
   <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 지금 시간이..?</button>
 
 <p id="demo"></p>
 
-</form> 
 </body>
 </html>
