--- a/WebContent/Ex.html
+++ b/WebContent/Ex.html
@@ -7,9 +7,14 @@
 <body>
 <p><a href="Ex1.html"target="_blank">유튜브 삽입</a></p>
 <p><a href="Ex2.html"target="_blank">테이블</a></p>
-<p><a href="Ex3.html"target="_blank"></a>배경색</p>
+<p><a href="Ex3.html"target="_blank">배경색</a></p>
 <p><a href="Ex4.html"target="_blank">클릭 시 내용 변경</a></p>
 <p><a href="Ex5.html"target="_blank">페이지</a></p>
+<p><a href="Ex6.html"target="_blank">Form</a></p>
+<p><a href="Signup.jsp"target="_blank">회원가입</a></p>
+
+
+
 
 </body>
 </html>
