--- a/WebContent/Ex.html
+++ b/WebContent/Ex.html
@@ -12,7 +12,8 @@
 <p><a href="Ex5.html"target="_blank">페이지</a></p>
 <p><a href="Ex6.html"target="_blank">Form</a></p>
 <p><a href="Signup.jsp"target="_blank">회원가입</a></p>
-
+<br>
+<p><a href="index.html"target="_blank">대문</a></p>
 
 
 
